2005-12-06  Titus Brown  <t@issola.caltech.edu>

	* Added sureshvv's commands in as 'match_parse' extension.

	* Moved extensions/ into twill/extensions; modified sys.path
	  accordingly in package import.

2005-12-05  Titus Brown  <t@issola.caltech.edu>

	* Fixed a problem where tidy was occasionally mangling long titles
	  with unnecessary newlines.

	* Fixed a bug in PatchedMechanizeBrowser.title() where seek(0) was
	  not getting called.

2005-12-03  Titus Brown  <t@issola.caltech.edu>

	* formfile now uses 'rb' to open files.  (Tom Parker)

	* local namespace now automatically created if it doesn't exist.

	* Applied tv's patches for checkbox/hidden problems and incorrect
	  error messages.

	* Fixed form submission to add referer headers; updated tests.
	  (Tom Parker)

	* Fixed tests: setup -> setup_module, teardown -> teardown_module.

2005-11-29  Titus Brown  <t@issola.caltech.edu>

	* RELEASE 0.8.

	* Additional coverage and some miscellaneous fixes.

2005-11-28  Titus Brown  <t@issola.caltech.edu>

	* Made http-equiv=refresh stuff work by overriding it in utils.py.
	  My fix is probably bad.  oh well, shouldn't make a difference...

2005-11-27  Titus Brown  <t@issola.caltech.edu>

	* Verified that eggs stuff now "just works".

	* Put in a fix for an HTTP Basic Auth bug (that is fixed in Py 2.5!)

	* Added in a test of 'formaction'.

	* Added in a bunch of form tests to test-form, fixed bugs discovered
	  thereby.

	* Added in sureshvv's formaction/fa patch.

	* Added in docs re 'tidy'.

	* Put in a rough 'tidy' implementation by wrapping FormsFactory and
	  LinksFactory.parser_class.

	* Removed 'get_title' from RequestWrapper, moved to using
	  MechanizeBrowser.title().

	* Added 'utils.run_tidy' function & 'test-tidy.py' under tests/.

	* Moved the journey-exception-wrapping into the mechanize mech_open
	  function; this fixes a bug reported by sureshvv.  Augmented
	  test-back.twill to test this, and added a 'plaintext' function