@@ -1,0 +1,53 @@
+ANNOUNCING twill v0.8.1.
+
+twill is a simple language for browsing the Web.  It's designed for
+automated testing of Web sites, but it can be used to interact with
+Web sites in a variety of ways.  In particular, twill supports form
+submission, cookies, redirects, and HTTP authentication.
+
+A twill script to use the "I'm feeling lucky" button on Google looks
+like this:
+
+    setlocal query "twill Python"
+
+    go http://www.google.com/
+
+    fv 1 q $query
+    submit btnI     # use the "I'm feeling lucky" button
+
+    show
+
+(Note that using this script abuses Google's Terms of Service.  So don't.)
+
+This is the seventh public release of twill, version 0.8.1.
+
+You can install twill with easy_install, or download this release at
+
+    http://darcs.idyll.org/~t/projects/twill-0.8.1.tar.gz
+
+Documentation is included in the .tar.gz and is also online at
+
+    http://www.idyll.org/~t/www-tools/twill/
+
+Miscellaneous details:
+
+twill is implemented in Python and uses pyparsing and mechanize.  In
+addition to the existing simple command language, twill can easily be
+extended with Python.  twill also provides a fairly simple and
+well-documented wrapper around mechanize.
+
+twill does not understand JavaScript, I'm sorry to say.
+
+---
+
+New features:
+
+    * match_parse extension (sureshvv);
+
+    * formfile fix for uploading binary files (Tom Parker);
+
+    * several patches for checkbox/hidden problems (tv);
+
+    * Referer: headers now correctly added on form submissions (Tom Parker);
+
+    * documentation reorganization.
