@@ -2,6 +2,28 @@
 Web browsing with twill
 =======================
 
+twill strives to be a complete implementation of a Web browser,
+omitting only JavaScript support.  It includes support for cookies,
+basic authentication, and most (all?) HTTP trickery, including
+HTTP-EQUIV redirects.  Please `let me know`_ if you find a situation
+where it doesn't work!
+
+twill implements a variety of commands_.  With the built-in language,
+you can do things like go to a specific URL; follow links; fill out
+forms and submit them; save, load, and delete cookies; and change the
+agent string.  You can also easily extend twill with new and specialized
+Python commands.
+
+.. _let me know: twill@lists.idyll.org
+.. _commands: commands.html
+
+Using twill interactively
+~~~~~~~~~~~~~~~~~~~~~~~~~
+
+twill-sh lets you interactively browse the Web.  It features built-in
+help, e.g. "help go" will describe the command 'go' to you;
+command-line completion with TAB; and history browsing (UP/DOWN arrows).
+
 Proxy servers
 ~~~~~~~~~~~~~
 
@@ -24,6 +46,13 @@ script.  maxq_ acts as an HTTP proxy and records all HTTP traffic; I
 have written a simple twill script generator for it.  The script
 generator and installation docs are included in the twill distribution
 under the directory ``maxq/``.
+
+A more recent option is to use the Firefox extension TestGen4Web_, which
+will record your Web browsing in a standard format.  Matt Harrison is
+working on converter.
+
+.. _converter: http://panela.blog-city.com/generate_twill_scripts_and_mechanize_unittests_from_testgen4.htm
+.. _TestGen4Web: http://developer.spikesource.com/wiki/index.php/Projects:TestGen4Web
 
 Running and using tidy
 ~~~~~~~~~~~~~~~~~~~~~~
