@@ -10,13 +10,8 @@
 <body>
 <div class="document" id="developing-twill">
 <h1 class="title">Developing twill</h1>
-<p>dev docs:</p>
-<blockquote>
-<ul class="simple">
-<li>advanced docs;</li>
-<li>todo</li>
-</ul>
-</blockquote>
+<p>twill is entirely written in Python.  You will need Python 2.3 or later
+to develop it.</p>
 <div class="section" id="package-tests">
 <h1><a name="package-tests">Package tests</a></h1>
 <p>twill comes with several unit tests.  They depend on <a class="reference" href="http://somethingaboutorange.com/mrl/projects/nose/">nose</a> and
@@ -103,6 +98,7 @@ functionality that can be directly applied to twill.</li>
 <li>command line completion doesn't understand extend_with results yet.</li>
 <li>extend_with etc. -- module namespaces, e.g. extmodule.fn?</li>
 <li>implement more complex proxy support.  proxies proxies proxies.</li>
+<li>'history' to show command history...</li>
 </ol>
 </blockquote>
 <p>Random ideas:</p>
