@@ -14,13 +14,14 @@
 a command-line interface.  With twill, you can navigate through Web
 sites that use forms, cookies, and most standard Web features.</p>
 <p>twill supports automated Web testing and has a simple Python interface.
-Check out the <a class="reference" href="&#64;CTB">examples</a>!</p>
+Check out the <a class="reference" href="examples.html">examples</a>!</p>
 <p>twill is open source and written in Python.</p>
 <div class="section" id="downloading-twill">
 <h1><a name="downloading-twill">Downloading twill</a></h1>
-<p>The latest release of twill is <a class="reference" href="ANNOUNCE-0.8.1.txt">twill 0.8.1</a>, released &#64;CTB; it is available
-for download at <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.8.1.tar.gz">http://darcs.idyll.org/~t/projects/twill-0.8.1.tar.gz</a>.
-You can also use Python's <a class="reference" href="http://peak.telecommunity.com/DevCenter/EasyInstall">easy_install</a> to install or upgrade it.</p>
+<p>The latest release of twill is <a class="reference" href="ANNOUNCE-0.8.1.txt">twill 0.8.1</a>, released December 10th,
+2005; it is available for download at
+<a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.8.1.tar.gz">http://darcs.idyll.org/~t/projects/twill-0.8.1.tar.gz</a>.  You can also
+use Python's <a class="reference" href="http://peak.telecommunity.com/DevCenter/EasyInstall">easy_install</a> to install or upgrade twill.</p>
 <p>twill works with Python 2.3 or later.</p>
 <p>To start using twill, install it and then type <tt class="docutils literal"><span class="pre">twill-sh</span></tt>.  At the
 prompt type:</p>
