@@ -4,26 +4,40 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="generator" content="Docutils 0.3.7: http://docutils.sourceforge.net/" />
-<title>Other tools and packages</title>
+<title>Propaganda, tools and packages</title>
 <link rel="stylesheet" href="default.css" type="text/css" />
 </head>
 <body>
-<div class="document" id="other-tools-and-packages">
-<h1 class="title">Other tools and packages</h1>
+<div class="document" id="propaganda-tools-and-packages">
+<h1 class="title">Propaganda, tools and packages</h1>
 <div class="section" id="other-opinions">
 <h1><a name="other-opinions">Other opinions</a></h1>
 <p>Grig Gheorgiu has written a blog entry on <a class="reference" href="http://agiletesting.blogspot.com/2005/09/web-app-testing-with-python-part-3.html">Web app testing using twill</a>.
 Michele Simionato wrote a nice long article on <a class="reference" href="http://www.onlamp.com/pub/a/python/2005/11/03/twill.html">Testing Web Apps</a>, and
 Nitesh Djanjani <a class="reference" href="http://www.oreillynet.com/pub/wlg/8201">tried it out</a> as well.</p>
 </div>
-<div class="section" id="other-tools">
-<h1><a name="other-tools">Other tools</a></h1>
+<div class="section" id="tools-based-on-twill">
+<h1><a name="tools-based-on-twill">Tools based on twill</a></h1>
+<p>Petrik De Heus wrote a Wikipedia <a class="reference" href="http://www.deheus.net/petrik/blog/post/68/">watchlist RSS feed</a> with twill.</p>
+</div>
+<div class="section" id="tools-useful-for-twill-users">
+<h1><a name="tools-useful-for-twill-users">Tools useful for twill users</a></h1>
+<p>Matt Harrison is working on a <a class="reference" href="http://panela.blog-city.com/generate_twill_scripts_and_mechanize_unittests_from_testgen4.htm">TestGen4Web-to-twill converter</a>.</p>
+</div>
+<div class="section" id="offshoots-from-the-twill-project">
+<h1><a name="offshoots-from-the-twill-project">Offshoots from the twill project</a></h1>
+<p>I wrote a simple <a class="reference" href="http://darcs.idyll.org/~t/projects/wsgi_intercept/README.html">wsgi_intercept</a> standalone package based on the WSGI
+interception stuff for in-process testing of WSGI apps by twill.  This
+is for people who want to talk directly to their Web
+apps without going through a network connection.</p>
+</div>
+<div class="section" id="other-python-based-web-testing-and-browsing-tools">
+<h1><a name="other-python-based-web-testing-and-browsing-tools">Other Python-based Web testing and browsing tools</a></h1>
 <p>For those who want to use Python-based toolkits to test their Web
-apps, there are a lot of great options.  Here are the ones I know
+apps, there are many great options.  Here are the ones I know
 about:</p>
-<p><a class="reference" href="http://pbp.berlios.de/">PBP</a> is very similar to twill, but the project seems to be
-more-or-less defunct.  There are still one or two things that
-PBP does that twill doesn't, but we're working on that ;).
+<p><a class="reference" href="http://pbp.berlios.de/">PBP</a> is very similar to twill -- twill was initially based on it -- but the
+project seems to be more-or-less defunct.
 Both twill and PBP are based on <a class="reference" href="http://wwwsearch.sf.net/">mechanize</a>.</p>
 <p><a class="reference" href="http://funkload.nuxeo.org/">funkload</a> is a nifty looking tool that does functional load testing.
 It is built on <a class="reference" href="http://mechanicalcat.net/tech/webunit/">webunit</a>.</p>
